--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
   "bugs": {
     "url": "https://github.com/ethny-tracker/tracker-contracts/issues"
   },
+  "files": [
+    "build/"
+  ],
   "homepage": "https://github.com/ethny-tracker/tracker-contracts#readme",
   "devDependencies": {
     "@types/bignumber.js": "^5.0.0",
