--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "npm run compile && npm run generate-types",
     "pretest": "npm run build",
     "test": "truffle test",
-    "prepare": "npm run build"
+    "prepare": "npm run clean && npm run build"
   },
   "repository": {
     "type": "git",
