--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pretest": "npm run build",
     "test": "truffle test",
     "migrate:kovan": "truffle migrate --network kovan",
-    "prepare": "npm run clean && npm run build && npm run migrate:kovan"
+    "prepare": "npm run clean && npm run build && npm run migrate:kovan",
+    "create-test-metadata": "ts-node scripts/create-test-metadata.ts"
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,9 @@
   ],
   "homepage": "https://github.com/ethny-tracker/tracker-contracts#readme",
   "devDependencies": {
+    "@ethny-tracker/tracker-protos": "^1.0.2",
     "@types/bignumber.js": "^5.0.0",
+    "js-sha256": "^0.9.0",
     "truffle": "^5.0.18",
     "truffle-hdwallet-provider": "^1.0.9",
     "truffle-typings": "^1.0.6",
